added build instructions to readme.md. tested